fix z-index in search bar

--- a/frontend/src/css/header.scss
+++ b/frontend/src/css/header.scss
@@ -214,7 +214,7 @@ div.none {
   height: 120vh;
   background-color: #2c2c2c78;
   position: fixed;
-  z-index: 1001;
+  z-index: 4001;
   top: 0;
   display: none;
 }
